--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
 
   fess01:
-    image: flaviostutz/fess:13.5.2
+    image: flaviostutz/fess:13.5.1.1
     ports:
       - 8080:8080
     environment:
@@ -11,7 +11,7 @@ services:
 
   es01:
     build: .
-    image: flaviostutz/fess-elasticsearch:7.5.1.2
+    image: flaviostutz/fess-elasticsearch
     environment:
       - node.name=es01
       # - discovery.seed_hosts=es02
