--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,24 @@ services:
     #   - esdata01:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
+
+    es02:
+      image: flaviostutz/fess-elasticsearch
+      environment:
+        - node.name=es02
+        - discovery.seed_hosts=es01
+        - cluster.initial_master_nodes=es01,es02
+        - cluster.name=fess-es
+        - bootstrap.memory_lock=false
+      # volumes:
+      #   - esdata02:/usr/share/elasticsearch/data
+      ports:
+        - 9201:9200
+  
+    kibana:
+      image: docker.elastic.co/kibana/kibana:7.5.1
+      environment:
+        - "ELASTICSEARCH_HOSTS=http://es01:9200"
+      ports:
+        - 5601:5601
+    
